--- a/css/style.css
+++ b/css/style.css
@@ -1,406 +1,375 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 /* all */
-html{
-    font-family: Arial, Helvetica, sans-serif;
+html {
+  font-family: Arial, Helvetica, sans-serif;
 }
-.slider{
-    z-index: -1;
+.slider {
+  z-index: -1;
 }
-.clear{
-    clear: both;
+.clear {
+  clear: both;
 }
-.text-white{
-    color: #fff !important;
+.text-white {
+  color: #fff !important;
 }
-.row{
-    margin-left: -8px;
-    margin-right: -8px;
+.row {
+  margin-left: -8px;
+  margin-right: -8px;
 }
-.row::after{
-    clear: both;
-    display: block;
-    content: "";
+.row::after {
+  clear: both;
+  display: block;
+  content: "";
 }
-.col{
-    float: left;
-    padding-left: 8px;
-    padding-right: 7px;
+.col {
+  float: left;
+  padding-left: 8px;
+  padding-right: 7px;
 }
-.col-third{
-    width: 33.3333333333%;
+.col-third {
+  width: 33.3333333333%;
 }
-.col-half{
-    width: 50%;
+.col-half {
+  width: 50%;
 }
-.col-ful
-{
-    width: 100%;
+.col-ful {
+  width: 100%;
 }
-.text-center{
-    text-align: center !important;
+.text-center {
+  text-align: center !important;
 }
-.contact-content
-{
-    margin-top: 48px;
+.contact-content {
+  margin-top: 48px;
 }
-.contact-info{
-    font-size: 18px;
-    line-height: 1.4;
+.contact-info {
+  font-size: 18px;
+  line-height: 1.4;
 }
-.contact-info i[class*="fas fa-"]
-{
-    width: 40px;
-    display:inline-block;
+.contact-info i[class*="fas fa-"] {
+  width: 40px;
+  display: inline-block;
 }
-.contact-form
-{
- 
-    font-size: 15px;
+.contact-form {
+  font-size: 15px;
 }
-.form-control
-{
-    padding: 8px;
-    border: solid 1px #ccc;
-    width: 100%;
+.form-control {
+  padding: 8px;
+  border: solid 1px #ccc;
+  width: 100%;
 }
-.mt-8{
-    margin-top: 8px;
+.mt-8 {
+  margin-top: 8px;
 }
-.mt-16{
-    margin-top: 16px;
+.mt-16 {
+  margin-top: 16px;
 }
-.form-submit{
-    float: right;
-    padding: 10px 12px;
-    background-color: black;
-    color: white;
+.form-submit {
+  float: right;
+  padding: 10px 12px;
+  background-color: black;
+  color: white;
 }
-.map .map1{
-    width: 100%;
+.map .map1 {
+  width: 100%;
 }
 /* main */
 
-
-#main{
-
+#main {
 }
-#header{
- height: 46px;
- background-color: black;
- position: fixed;
- top: 0;
- left: 0;
- right: 0;
- z-index: 1;
-
+#header {
+  height: 46px;
+  background-color: black;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
 }
-#nav{
-    display: inline-block;
+#nav {
+  display: inline-block;
 }
-#nav>li{display: inline-block;}
-#nav li{
-    position: relative;
+#nav > li {
+  display: inline-block;
 }
-#nav>li>a
-{
-    color: #fff;
-
+#nav li {
+  position: relative;
+}
+#nav > li > a {
+  color: #fff;
 }
 
-#nav .subnav{
-    list-style-type: none;
-    top: 100%;
-    left: 0;
+#nav .subnav {
+  list-style-type: none;
+  top: 100%;
+  left: 0;
 }
-#nav li a{
-    text-decoration: none;
-    line-height: 46px;
-    padding: 0 24px;
-    display: block;
+#nav li a {
+  text-decoration: none;
+  line-height: 46px;
+  padding: 0 24px;
+  display: block;
 }
 #nav .subnav li:hover a,
-#nav >li:hover> a{
-    background-color: #ccc;
-    color: #000;
+#nav > li:hover > a {
+  background-color: #ccc;
+  color: #000;
 }
-#nav .subnav{
-    display: none;
-    position: absolute;
-    background-color: #fff;
-
+#nav .subnav {
+  display: none;
+  position: absolute;
+  background-color: #fff;
 }
 #nav li:hover .subnav {
-    display: block;
+  display: block;
 }
 
-
-#nav .subnav a{
-    color: #000;
+#nav .subnav a {
+  color: #000;
 }
-.search ,.menu-mobile{
-    float: right;
-    line-height: 46px;
-    padding: 0 21px;
-
-
+.search,
+.menu-mobile {
+  float: right;
+  line-height: 46px;
+  padding: 0 21px;
 }
-#header #mobile-menu{
-    position: absolute;
-    top: 0;
-    right: 0;
+#header #mobile-menu {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
-.menu-mobile{
-    color: #fff;
-    display: none;
+.menu-mobile {
+  color: #fff;
+  display: none;
 }
-#header .menu-mobile:hover{
-    background-color: #ccc;
+#header .menu-mobile:hover {
+  background-color: #ccc;
 }
-.search-icon
-{
-    color: white;
+.search-icon {
+  color: white;
 }
 
-#slider{
-    margin-top: 46px;
-    padding-top: 50%;
-    position: relative;
-    background: url(/Manh-main/img/la.jpg) top center / cover no-repeat;
-
+#slider {
+  margin-top: 46px;
+  padding-top: 50%;
+  position: relative;
+  background: url(../img/la.jpg) top center / cover no-repeat;
 }
 
-#slider .text-content{
-    position: absolute;
-    position: absolute;
-    bottom: 47px;
-    color: white;
-    left: 50%;
-    text-align: center;
-    transform: translateX(-50%);
+#slider .text-content {
+  position: absolute;
+  position: absolute;
+  bottom: 47px;
+  color: white;
+  left: 50%;
+  text-align: center;
+  transform: translateX(-50%);
 }
-#content .content-section{
-    width: 800px;
-    max-width: 100%;
-    padding: 64px 0;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 16px;
-    padding-right: 16px;
-
+#content .content-section {
+  width: 800px;
+  max-width: 100%;
+  padding: 64px 0;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 16px;
+  padding-right: 16px;
 }
-#content .section-heading{
-    font-size: 30px;
-    letter-spacing: 4px;
-    font-weight: 600;
+#content .section-heading {
+  font-size: 30px;
+  letter-spacing: 4px;
+  font-weight: 600;
 }
-#content .section-sub-heading
-{
-    opacity: 0.5;
-    margin-top: 25px;
+#content .section-sub-heading {
+  opacity: 0.5;
+  margin-top: 25px;
 }
 #content .section-heading,
-#content .section-sub-heading
-{
-text-align: center;
+#content .section-sub-heading {
+  text-align: center;
 }
-.about-text{
-    text-align: justify;
-    margin-top: 15px;
-    font-size: 15px;
+.about-text {
+  text-align: justify;
+  margin-top: 15px;
+  font-size: 15px;
 }
-#content .member-list
-{
-    margin-top: 48px;
-    overflow: hidden;
+#content .member-list {
+  margin-top: 48px;
+  overflow: hidden;
 }
-#content .member-name{
-    font-size: 15px;
+#content .member-name {
+  font-size: 15px;
 }
 
-#content .member-img{
-    margin-top: 15px;
-    width: 154px;
-    border-radius: 4px;
+#content .member-img {
+  margin-top: 15px;
+  width: 154px;
+  border-radius: 4px;
 }
-.tour-section{
-    background-color: #000;
+.tour-section {
+  background-color: #000;
 }
-.ticket-list{
-    background-color: #fff;
-    margin-top: 40px;
-    list-style: none;
+.ticket-list {
+  background-color: #fff;
+  margin-top: 40px;
+  list-style: none;
 }
-.ticket-list li{
-    padding: 11px 16px;
-    font-size: 15px;
-    border-bottom: 2px solid #ddd;
-}
-
-
-.ticket-list .sold-out{
-    color: #fff;
-    background-color: orange;
-    margin-left: 16px;
-    padding: 3px 4px;
-
-}
-.ticket-list .quantity{
-    background-color: black;
-    color: white;
-    padding: 2px 8px;
-    border-radius: 64%;
-    /* margin-right: 10px; */
-    float: right;
-
-}
-.place-list{
-    margin-top: 16px;
-   
-    margin-bottom: 48px;
-
+.ticket-list li {
+  padding: 11px 16px;
+  font-size: 15px;
+  border-bottom: 2px solid #ddd;
 }
 
-.place-img{
-    width: 100%;
-    display: block;
+.ticket-list .sold-out {
+  color: #fff;
+  background-color: orange;
+  margin-left: 16px;
+  padding: 3px 4px;
 }
-.place-img:hover{
-    opacity: 0.6;
+.ticket-list .quantity {
+  background-color: black;
+  color: white;
+  padding: 2px 8px;
+  border-radius: 64%;
+  /* margin-right: 10px; */
+  float: right;
 }
-.place-body{
-    background-color: #fff;
-    padding: 16px;
-    font-size: 15px;
-}
-.place-heading{
-    margin-top: 15px;
+.place-list {
+  margin-top: 16px;
 
-}
-.place-time{
-margin-top: 15px;
-color: #757575;
-}
-.place-dsc{
-    margin-top: 15px;
-    line-height: 1.6;
-}
-.buy-tickets-btn
-{
-    text-decoration: none;
-    background-color: black;
-    color: white;
-    /* padding: 2px; */
-    display: inline-block;
-    padding: 11px;
-    margin-top: 10px;
-}
-.buy-tickets-btn:hover{
-    background-color: #ccc;
+  margin-bottom: 48px;
 }
 
-#footer{
+.place-img {
+  width: 100%;
+  display: block;
+}
+.place-img:hover {
+  opacity: 0.6;
+}
+.place-body {
+  background-color: #fff;
+  padding: 16px;
+  font-size: 15px;
+}
+.place-heading {
+  margin-top: 15px;
+}
+.place-time {
+  margin-top: 15px;
+  color: #757575;
+}
+.place-dsc {
+  margin-top: 15px;
+  line-height: 1.6;
+}
+.buy-tickets-btn {
+  text-decoration: none;
+  background-color: black;
+  color: white;
+  /* padding: 2px; */
+  display: inline-block;
+  padding: 11px;
+  margin-top: 10px;
+}
+.buy-tickets-btn:hover {
+  background-color: #ccc;
+}
 
+#footer {
 }
-.model{
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: none;
-    align-items: center;
-    justify-content: center;
+.model {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: none;
+  align-items: center;
+  justify-content: center;
 }
-.model.open{
-    display: flex;
+.model.open {
+  display: flex;
 }
-.model-container{
-    background-color: #fff;
-    width: 900px;
-    min-height: 200px;
-    position: relative;
-    max-width: calc(100%-50px);
-    animation: modelfadein ease 0.5s;
+.model-container {
+  background-color: #fff;
+  width: 900px;
+  min-height: 200px;
+  position: relative;
+  max-width: calc(100%-50px);
+  animation: modelfadein ease 0.5s;
 }
-.model-header{
-    background-color: #009688;
-    height: 130px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 30px;
-    color: #fff;
-    letter-spacing: 6px;
-    
+.model-header {
+  background-color: #009688;
+  height: 130px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  color: #fff;
+  letter-spacing: 6px;
 }
-.model-close{
-position: absolute;
-right: 0;
-padding: 12px;
-color: #fff;
+.model-close {
+  position: absolute;
+  right: 0;
+  padding: 12px;
+  color: #fff;
 }
-.model-close:hover{
-    background-color: #ddd;
-    cursor: pointer;
+.model-close:hover {
+  background-color: #ddd;
+  cursor: pointer;
 }
-.model-close>i{
-    color: #fff;
+.model-close > i {
+  color: #fff;
 }
-.model-body{
-    padding: 16px;
+.model-body {
+  padding: 16px;
 }
-.model-label{
-    display: block;
+.model-label {
+  display: block;
 }
 
 .model-input {
-    border: 1px solid #ccc;
-    width: 100%;
-    padding: 10px;
+  border: 1px solid #ccc;
+  width: 100%;
+  padding: 10px;
 }
 input.model-input {
-    margin-top: 13px;
-    margin-bottom: 11px;
-    /* margin: 0 10px; */
+  margin-top: 13px;
+  margin-bottom: 11px;
+  /* margin: 0 10px; */
 }
-#buy-tickets
-{
-    width: 100%;
-    padding: 15px;
-    background-color: #009688;
+#buy-tickets {
+  width: 100%;
+  padding: 15px;
+  background-color: #009688;
 }
-.model-help{
-    text-align: right;
+.model-help {
+  text-align: right;
 }
-#footer
-{
-    font-size: 20px;
-    text-align: center;
-    margin-top: 50px;
-    color: aqua;
+#footer {
+  font-size: 20px;
+  text-align: center;
+  margin-top: 50px;
+  color: aqua;
 }
-.Manh{
-    text-align: center;
-    margin-top: 14px;
-    font-size: 13px;
-    margin-bottom: 40px;
+.Manh {
+  text-align: center;
+  margin-top: 14px;
+  font-size: 13px;
+  margin-bottom: 40px;
 }
-@keyframes modelfadein{
-    from{
-        transform: translateY(-140px);
-        opacity: 0;
-    }
-    to{
-        transform: translateY(0px);
-        opacity: 1;
-
-    }
+@keyframes modelfadein {
+  from {
+    transform: translateY(-140px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0px);
+    opacity: 1;
+  }
 }
-@media (max-width:800px){
-
+@media (max-width: 800px) {
 }
